--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
+    <div class="container">
         <header>
             <h1>About Flight</h1>
             <nav>
@@ -18,30 +19,40 @@
                 </ul>
             </nav>
         </header>
-        <section id="history">
-            <h2>History of Flight</h2>
-            <img src="IKL1.jpg" alt="History of Flight" class="section-image">
-            <p>The history of flight is a fascinating journey that began with the dreams of humanity to soar through the skies. From the earliest attempts at gliding to the invention of the first powered aircraft by the Wright brothers in 1903, flight has transformed the way we connect and explore the world.</p>
-        </section>
 
-        <section id="statistics">
-            <h2>Flight Statistics</h2>
-            <img src="IKL2.jpg" alt="Flight Statistics" class="section-image" width = "600" height = "500>
-            <p>According to recent statistics, the aviation industry has shown remarkable growth over the years. In 2020, despite the pandemic, over 2.8 billion passengers traveled by air. By 2025, it is projected that the number will exceed 4 billion annually.</p>
-        </section>
+        <div class="card">
+            <section id="history">
+                <h2>History of Flight</h2>
+                <img src="IKL1.jpg" alt="An image representing the history of flight" class="section-image">
+                <p>The history of flight is a fascinating journey that began with the dreams of humanity to soar through the skies. From the earliest attempts at gliding to the invention of the first powered aircraft by the Wright brothers in 1903, flight has transformed the way we connect and explore the world.</p>
+            </section>
+        </div>
 
-        <section id="risks-benefits">
-            <h2>Risks and Benefits</h2>
-            <img src="IKL3.jpg" alt="Risks and Benefits of Flight" class="section-image">
-            <p>Flying is one of the safest modes of transportation, with a low accident rate compared to cars. However, risks include turbulence, potential technical failures, and security concerns. The benefits include time efficiency, global connectivity, and the ability to travel long distances quickly.</p>
-        </section>
+        <div class="card">
+            <section id="statistics">
+                <h2>Flight Statistics</h2>
+                <img src="IKL2.jpg" alt="An image representing flight statistics" class="section-image" width="500" height="400">
+                <p>According to recent statistics, the aviation industry has shown remarkable growth over the years. In 2020, despite the pandemic, over 2.8 billion passengers traveled by air. By 2025, it is projected that the number will exceed 4 billion annually.</p>
+            </section>
+        </div>
 
-        <section id="conclusion">
-            <h2>Conclusion</h2>
-            <img src="IKL4.jpg" alt="Conclusion on Flight" class="section-image">
-            <p>Flight has revolutionized the way we travel and interact globally. While there are risks involved, the benefits far outweigh them, making flying an essential part of modern life.</p>
-        </section>
-        <button id="toggleTheme">Toggle Theme</button>
+        <div class="card">
+            <section id="risks-benefits">
+                <h2>Risks and Benefits</h2>
+                <img src="IKL3.jpg" alt="An image representing the risks and benefits of flight" class="section-image">
+                <p>Flying is one of the safest modes of transportation, with a low accident rate compared to cars. However, risks include turbulence, potential technical failures, and security concerns. The benefits include time efficiency, global connectivity, and the ability to travel long distances quickly.</p>
+            </section>
+        </div>
+
+        <div class="card">
+            <section id="conclusion">
+                <h2>Conclusion</h2>
+                <img src="IKL4.jpg" alt="An image representing the conclusion on flight" class="section-image">
+                <p>Flight has revolutionized the way we travel and interact globally. While there are risks involved, the benefits far outweigh them, making flying an essential part of modern life.</p>
+            </section>
+        </div>
+    </div>
+
     <script src="script2.js"></script>
 </body>
 </html>
