--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,18 @@
     <title>Flight Members Contact Info</title>
     <link rel="stylesheet" href="styles3.css">
 </head>
-<body>
-       <h1>Flight Members Contact Information</h1>
-        <div class="card">
+<body align = 'center'>
+<p>
+        <h1>Flight Members Contact Information</h1> </p>
+        <p><div class="card">
             <h2>Pilot</h2>
             <div class="member-info">
                 <p><strong>Name:</strong> John Doe</p>
                 <p><strong>Qualification:</strong> ATPL</p>
                 <p><strong>Contact Number:</strong> +1 (234) 567-8901</p>
             </div>
-        </div>
-        <div class="card">
+        </div> </p>
+        <p><div class="card">
             <h2>Cabin Crew</h2>
             <div class="member-info">
                 <p><strong>Name:</strong> Jane Smith</p>
@@ -28,8 +29,8 @@
                 <p><strong>Qualification:</strong> Certified Flight Attendant</p>
                 <p><strong>Contact Number:</strong> +1 (234) 567-8903</p>
             </div>
-        </div>
-        <div class="card">
+        </div></p>
+        <p><div class="card">
             <h2>Luggage Information</h2>
             <p><strong>Allowed Luggage Size:</strong> 55 x 40 x 20 cm</p>
             <p><strong>Not Allowed Items:</strong></p>
@@ -41,7 +42,7 @@
                 <li>Liquid over 100ml</li>
             </ul>
         </div>
-        <button id="toggleInfoBtn">Toggle Member Info</button>
+        </p>
     <script src="script3.js"></script>
 </body>
 </html>
