--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         <div class="card">
             <section id="conclusion">
                 <h2>Conclusion</h2>
-                <img src="IKL4.jpg" alt="An image representing the conclusion on flight" class="section-image">
+                <img src="IKL4.jpg" alt="An image representing the conclusion on flight" class="section-image" width = "100" height = "200">
                 <p>Flight has revolutionized the way we travel and interact globally. While there are risks involved, the benefits far outweigh them, making flying an essential part of modern life.</p>
             </section>
         </div>
