--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
 <body>
     <div class="container">
         <header>
-            <h1>About Flight</h1>
             <nav>
                 <ul>
                     <li><a href="#history">History</a></li>
@@ -19,6 +18,8 @@
                 </ul>
             </nav>
         </header>
+        <p>
+        <center><h1>About Flight</h1></center></p>
 
         <div class="card">
             <section id="history">
