--- a/about.html
+++ b/about.html
@@ -23,24 +23,33 @@
 
         <div class="card">
             <section id="history">
-                <h3>History of Flight</h3>
-                <p>The history of flight is a fascinating journey that began with the dreams of humanity to soar through the skies. From the earliest attempts at gliding to the invention of the first powered aircraft by the Wright brothers in 1903, flight has transformed the way we connect and explore the world.</p>
+                <h3><b>History of Flight</b></h3>
+                <p>The dream of human flight has captivated humanity for centuries. From ancient civilizations experimenting with kites and gliders to Leonardo da Vinci's visionary sketches, the concept of conquering the skies has been a persistent aspiration. The 18th century marked a pivotal moment with the invention of the hot air balloon, demonstrating the possibility of defying gravity. However, it was the Wright brothers' groundbreaking powered flight in 1903 that truly ushered in the age of aviation. Subsequent decades witnessed rapid advancements, from the development of jet engines to supersonic flight and the rise of commercial aviation. Today, air travel is an integral part of global connectivity, while the exploration of space continues to push the boundaries of human achievement.</p>
+                <p>The 20th century witnessed an explosion of aviation advancements. The development of jet engines dramatically increased speed and efficiency, transforming air travel into a global phenomenon. The breaking of the sound barrier by aircraft like the Concorde pushed the boundaries of what was thought possible. Commercial aviation flourished, connecting people and cultures across the world.</p>
+                <p>Today, aviation continues to evolve. Emphasis is placed on sustainability, with electric and hybrid aircraft emerging. The industry is also exploring new frontiers, such as autonomous flight and supersonic passenger travel. From its humble beginnings to its complex modern form, the history of flight is a story of human achievement and innovation.</p>
             </section>
         </div>
 
         <div class="card">
             <section id="statistics">
-                <h3>Flight Statistics</h3>
-                <img src="IKL2.jpg" alt="An image representing flight statistics" class="section-image" width="150" height="100">
-                <p>According to recent statistics, the aviation industry has shown remarkable growth over the years. In 2020, despite the pandemic, over 2.8 billion passengers traveled by air. By 2025, it is projected that the number will exceed 4 billion annually.</p>
+                <h3><b>Flight Statistics</b></h3>
+                <img src="IKL2.jpg" alt="An image representing flight statistics" class="section-image" width="500" height="450"  align ="center">
+                <p>The airline industry is a colossal global enterprise that underpins much of the world's economic activity. Billions of passengers take to the skies annually, facilitated by thousands of flights operated by hundreds of airlines. This massive network generates trillions of dollars in revenue, supporting millions of jobs directly and indirectly. Key performance indicators such as load factor, on-time performance, and fuel efficiency are crucial for airline profitability. However, the industry faces significant challenges, including volatile fuel prices, intense competition, economic fluctuations, and environmental concerns.</p>
+                <p>The Asia-Pacific region has emerged as a dominant force in the airline industry, driven by rapid economic growth and increasing disposable incomes. North America and Europe remain major players, with established carriers and vast networks. The COVID-19 pandemic dealt a severe blow to the industry, causing unprecedented losses and disruptions. However, the sector is gradually recovering, with passenger numbers steadily climbing.</p>
+                <p><i>The airline industry is undergoing a period of transformation. Sustainability is a top priority, with airlines investing in fuel-efficient aircraft and exploring alternative fuels. Technology is also reshaping the industry, with advancements in digitalization, automation, and personalized customer experiences. As the world becomes increasingly interconnected, the airline industry is expected to continue growing, albeit with a renewed focus on environmental responsibility and operational efficiency.</i></p>
             </section>
         </div>
 
         <div class="card">
             <section id="risks-benefits">
-                <h3>Risks and Benefits</h3>
-                <img src="IKL3.jpg" alt="An image representing the risks and benefits of flight" class="section-image"  width = "150" height = "100">
-                <p>Flying is one of the safest modes of transportation, with a low accident rate compared to cars. However, risks include turbulence, potential technical failures, and security concerns. The benefits include time efficiency, global connectivity, and the ability to travel long distances quickly.</p>
+                <h3><b>Risks and Benefits</b></h3>
+                <img src="IKL3.jpg" alt="An image representing the risks and benefits of flight" class="section-image"  width = "500" height = "450"    align = "center">
+                <p><b>The Benefits of Flight</b></p>
+                <p>Air travel has revolutionized global connectivity. It offers unparalleled speed and efficiency, enabling people and goods to traverse vast distances in a fraction of the time compared to other modes of transport. This has facilitated international trade, tourism, and cultural exchange on an unprecedented scale. Moreover, air travel has become essential for emergency services, humanitarian aid, and disaster relief efforts, providing rapid access to remote and inaccessible regions. The medical field also benefits immensely from air transportation, enabling the swift transfer of patients and organs for transplants.</p>
+                <p><b>The Risks associated with Flight</b></p>
+                <p>While the benefits of flight are undeniable, there are inherent risks. The most obvious is the potential for accidents, which can result in severe injuries or fatalities. Factors such as human error, mechanical failures, and adverse weather conditions contribute to these risks. Additionally, the aviation industry has a significant environmental impact, contributing to air pollution, noise pollution, and climate change. The high energy consumption of aircraft exacerbates these issues. Furthermore, the global interconnectedness facilitated by air travel can also increase the spread of infectious diseases.</p>
+                <p><b>Migitating Risks and Maximizing Benefits</b></p>
+                <p>The aviation industry has implemented stringent safety measures to minimize the risk of accidents, including rigorous pilot training, advanced aircraft technology, and stringent maintenance protocols. Ongoing research and development are focused on developing more environmentally friendly aircraft and propulsion systems to reduce the industry's carbon footprint. By balancing the benefits of air travel with the associated risks, the aviation sector can continue to play a vital role in connecting the world while minimizing its impact on the environment.</p>
             </section>
         </div>
 
