--- a/contact.html
+++ b/contact.html
@@ -6,34 +6,29 @@
     <title>Flight Members Contact Info</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body align = 'center'>
     <h1 style="text-align: center;">Flight Members Contact Information</h1>
 
-    <div class="card" style="text-align: center;">
-        <h2>Pilot</h2>
-        <div class="member-info">
+    <section id = "pilot">
+        <h2><b>Pilot</b></h2>
             <p><strong>Name:</strong> John Doe</p>
             <p><strong>Qualification:</strong> ATPL</p>
             <p><strong>Contact Number:</strong> +1 (234) 567-8901</p>
-        </div>
-    </div>
+        </section>
 
-    <div class="card" style="text-align: center;">
-        <h2>Cabin Crew</h2>
-        <div class="member-info">
+   <section id = "cabin-crew">
+        <h2><b>Cabin Crew</b></h2>
             <p><strong>Name:</strong> Jane Smith</p>
             <p><strong>Qualification:</strong> Certified Flight Attendant</p>
             <p><strong>Contact Number:</strong> +1 (234) 567-8902</p>
-        </div>
-        <div class="member-info">
+            <p> </p>
             <p><strong>Name:</strong> Mike Johnson</p>
             <p><strong>Qualification:</strong> Certified Flight Attendant</p>
             <p><strong>Contact Number:</strong> +1 (234) 567-8903</p>
-        </div>
-    </div>
+   </section>
 
-    <div class="card" style="text-align: center;">
-        <h2>Luggage Information</h2>
+    <section id = "luggage">
+        <h2><b>Luggage Information</b></h2>
         <p><strong>Allowed Luggage Size:</strong> 55 x 40 x 20 cm</p>
         <p><strong>Not Allowed Items:</strong></p>
         <ul>
@@ -43,7 +38,7 @@
             <li>Guns and firearms</li>
             <li>Liquid over 100ml</li>
         </ul>
-    </div>
+    </section>
 
     <script src="script3.js"></script>
 </body>
