--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
                     <li><a href="#statistics">Statistics</a></li>
                     <li><a href="#risks-benefits">Risks and Benefits</a></li>
                     <li><a href="#conclusion">Conclusion</a></li>
+                    <li><a href = "index.html">Back To Homepage</a></li>
                 </ul>
             </nav>
         </header>
