--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       
             <section id="statistics">
                 <h3><b>Flight Statistics</b></h3>
-                <img src="IKL2.jpg" alt="An image representing flight statistics" class="section-image" width="500" height="450"  align ="center">
+                <center><img src="IKL2.jpg" alt="An image representing flight statistics" class="section-image" width="500" height="450"></center>
                 <p>The airline industry is a colossal global enterprise that underpins much of the world's economic activity. Billions of passengers take to the skies annually, facilitated by thousands of flights operated by hundreds of airlines. This massive network generates trillions of dollars in revenue, supporting millions of jobs directly and indirectly. Key performance indicators such as load factor, on-time performance, and fuel efficiency are crucial for airline profitability. However, the industry faces significant challenges, including volatile fuel prices, intense competition, economic fluctuations, and environmental concerns.</p>
                 <p>The Asia-Pacific region has emerged as a dominant force in the airline industry, driven by rapid economic growth and increasing disposable incomes. North America and Europe remain major players, with established carriers and vast networks. The COVID-19 pandemic dealt a severe blow to the industry, causing unprecedented losses and disruptions. However, the sector is gradually recovering, with passenger numbers steadily climbing.</p>
                 <p><i>The airline industry is undergoing a period of transformation. Sustainability is a top priority, with airlines investing in fuel-efficient aircraft and exploring alternative fuels. Technology is also reshaping the industry, with advancements in digitalization, automation, and personalized customer experiences. As the world becomes increasingly interconnected, the airline industry is expected to continue growing, albeit with a renewed focus on environmental responsibility and operational efficiency.</i></p>
@@ -44,7 +44,7 @@
     
             <section id="risks-benefits">
                 <h3><b>Risks and Benefits</b></h3>
-                <img src="IKL3.jpg" alt="An image representing the risks and benefits of flight" class="section-image"  width = "500" height = "450"    align = "center">
+                <center><img src="IKL3.jpg" alt="An image representing the risks and benefits of flight" class="section-image"  width = "500" height = "500"></center>
                 <p><b>The Benefits of Flight</b></p>
                 <p>Air travel has revolutionized global connectivity. It offers unparalleled speed and efficiency, enabling people and goods to traverse vast distances in a fraction of the time compared to other modes of transport. This has facilitated international trade, tourism, and cultural exchange on an unprecedented scale. Moreover, air travel has become essential for emergency services, humanitarian aid, and disaster relief efforts, providing rapid access to remote and inaccessible regions. The medical field also benefits immensely from air transportation, enabling the swift transfer of patients and organs for transplants.</p>
                 <p><b>The Risks associated with Flight</b></p>
