--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
                     <li><a href="#risks-benefits">Risks and Benefits</a></li>
                     <li><a href="#conclusion">Conclusion</a></li>
                     <li><a href = "index.html" class = "back-button">Back To Homepage</a></li>
+                    <li><button id="theme-toggle">Toggle Dark Mode</button></li>
                 </ul>
             </nav>
         </header>
