--- a/about.html
+++ b/about.html
@@ -16,7 +16,6 @@
                     <li><a href="#risks-benefits">Risks and Benefits</a></li>
                     <li><a href="#conclusion">Conclusion</a></li>
                     <li><a href = "index.html" class = "back-button">Back To Homepage</a></li>
-                    <li><button id="theme-toggle">Toggle Dark Mode</button></li>
                 </ul>
             </nav>
         </header>
@@ -62,7 +61,7 @@
             </section>
         
 
-
+    <button id="theme-toggle">Toggle Dark Mode</button>
     <script src="script2.js"></script>
 </body>
 </html>
