--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
                     <li><a href="#statistics">Statistics</a></li>
                     <li><a href="#risks-benefits">Risks and Benefits</a></li>
                     <li><a href="#conclusion">Conclusion</a></li>
+                    <li>  <button id="theme-toggle">Toggle Dark Mode</button></li>
                     <li><a href = "index.html" class = "back-button">Back To Homepage</a></li>
                 </ul>
             </nav>
@@ -60,8 +61,6 @@
                 <p>Flight has revolutionized the way we travel and interact globally. While there are risks involved, the benefits far outweigh them, making flying an essential part of modern life.</p>
             </section>
         
-
-    <button id="theme-toggle">Toggle Dark Mode</button>
     <script src="script2.js"></script>
 </body>
 </html>
