--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body align = 'center'>
     <h1 style="text-align: center;">Flight Members Contact Information</h1>
-
+      <button id="theme-toggle">Toggle Dark Mode</button>
     <section id = "pilot">
         <h2><b>Pilot</b></h2>
             <p><strong>Name:</strong> John Doe</p>
@@ -40,6 +40,6 @@
         </ul>
     </section>
 
-    <script src="script3.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
